# salmo

./: CHANGELOG.md  CMakeLists.txt  README.md
demo/: file_preparation.py  flask_salmo_wrapper.py  unitary_test.py  visualization.py
demo/flask_input/: flaskParam.config
demo/input/: denMap_run0_f1z1.fits  denMap_run0_f1z2.fits  denMap_run0_f1z3.fits  mask_type0.fits  mask_type1.fits
demo/output/: galCat_ref_type0.fits  galCat_ref_type1.fits
param/: MFPParam.par  salmoParam.par
source/: FITSFunctions.c  FITSFunctions.h  HEALPixFunctions.c  HEALPixFunctions.h  commonHeader.c  commonHeader.h  main.c  main.h  parameters.c  parameters.h  sampling.c  sampling.h  wrapper.cpp  wrapper.h
